Documentação de contents no swagger
